samples/_failures_safe/1761394011_df99a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a027b22.c: In function ‘main’:
./samples/SAFE/__tmp_5a027b22.c:156:5: error: expected expression at end of input
  156 |     if (a < 0 || b < 0 || c < 0 ||
      |     ^~
./samples/SAFE/__tmp_5a027b22.c:156:5: error: expected declaration or statement at end of input
